Fixed the pie charts legend items alignment issue

--- a/web/src/Pages/Dashboard/dashboard.scss
+++ b/web/src/Pages/Dashboard/dashboard.scss
@@ -125,6 +125,18 @@
 
   .height-pie-rem {
     height: 26.2rem;
+
+    .apexcharts-legend {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between !important;
+    }
+
+    .apexcharts-legend-series {
+      display: flex !important;
+      width: 38%;
+    }
   }
 
   .height-bar-rem {
@@ -390,6 +402,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            width: 100%;
           }
         }
       }
